basic html skeleton

--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    
+    <aside>
+        <div>
+            <img src="images/zeus_small.png" alt="zeus"><span>Zeus</span>
+        </div>
+        <div class="atribution">
+            <p>
+                Photo by <a href="https://unsplash.com/@jonnymckenna?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jonny McKenna</a> on <a href="https://unsplash.com/s/photos/mountain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+            </p>
+            <p>
+                <a href="https://www.flaticon.com/free-icons/zeus" title="zeus icons" target="_blank">Zeus icons created by Freepik - Flaticon</a> 
+            </p>
+        </div>
+    </aside>
+    <main></main>
+        <p>
+            This is not a real online service!
+            You know you need something like this in your life
+            to help you realize your deepest dreams.
+            Sign up now to get started
+        </p>
+        <p>
+            You <i>know</i> you want to.
+        </p>
+        <form>
+            <div class="container">
+                <h3>Let's do this</h3>
+                <div>
+                    <label for="firstName">First Name</label><br>
+                    <input type="text" id="firstName" name="firstName" required>
+                </div>
+                <div>
+                    <label for="lastName">Last Name</label>
+                    <input type="text" id="lastName" name="lastName" required>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div>
+                    <label for="confirmPassword">Password</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                </div>
+            </div>
+            <button type="submit">Create Account</button>
+            <p>Already have an account? <a href="#">Log In</a></p>
+        </form>
+    </main>
 </body>
 </html>
