--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <aside>
-        <div>
-            <img src="images/zeus_small.png" alt="zeus"><span>Zeus</span>
+        <div class="zeus-image">
+            <img src="images/zeus(2).png" alt="zeus"><span>Zeus</span>
         </div>
         <div class="atribution">
             <p>
@@ -21,7 +21,7 @@
             </p>
         </div>
     </aside>
-    <main></main>
+    <main>
         <p>
             This is not a real online service!
             You know you need something like this in your life
