stylized div.intro

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
         </div>
     </aside>
     <main>
-        <p>
-            This is not a real online service!
-            You know you need something like this in your life
-            to help you realize your deepest dreams.
-            Sign up now to get started
-        </p>
-        <p>
-            You <i>know</i> you want to.
-        </p>
+        <div class="intro">
+            <p>
+                This is not a real online service!
+                You know you need something like this in your life
+                to help you realize your deepest dreams.
+                Sign up now to get started
+            </p>
+            <p>
+                You <i>know</i> you want to.
+            </p>
+        </div>
         <form>
             <div class="container">
                 <h3>Let's do this</h3>
@@ -59,8 +61,10 @@
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </div>
             </div>
-            <button type="submit">Create Account</button>
-            <p>Already have an account? <a href="#">Log In</a></p>
+            <div class="below-container">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="#">Log In</a></p>
+            </div>
         </form>
     </main>
 </body>
