--- a/index.html
+++ b/index.html
@@ -34,30 +34,30 @@
             </p>
         </div>
         <form>
+            <h1>Let's do this!</h1>
             <div class="container">
-                <h3>Let's do this</h3>
                 <div>
-                    <label for="firstName">First Name</label><br>
+                    <label for="firstName">FIRST NAME</label><br>
                     <input type="text" id="firstName" name="firstName" required>
                 </div>
                 <div>
-                    <label for="lastName">Last Name</label>
+                    <label for="lastName">LAST NAME</label><br>
                     <input type="text" id="lastName" name="lastName" required>
                 </div>
                 <div>
-                    <label for="email">Email</label>
+                    <label for="email">EMAIL</label><br>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div>
-                    <label for="phoneNumber">Phone Number</label>
+                    <label for="phoneNumber">PHONE NUMBER</label><br>
                     <input type="tel" id="phoneNumber" name="phoneNumber" required>
                 </div>
                 <div>
-                    <label for="password">Password</label>
+                    <label for="password">PASSWORD</label><br>
                     <input type="password" id="password" name="password" required>
                 </div>
                 <div>
-                    <label for="confirmPassword">Password</label>
+                    <label for="confirmPassword">CONFIRM PASSWORD</label><br>
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </div>
             </div>
