more widget container styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Photo by <a href="https://unsplash.com/@jonnymckenna?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jonny McKenna</a> on <a href="https://unsplash.com/s/photos/mountain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
             </p>
             <p>
-                <a href="https://www.flaticon.com/free-icons/zeus" title="zeus icons" target="_blank">Zeus icons created by Freepik - Flaticon</a> 
+                <a href="https://www.flaticon.com/free-icons/zeus" title="zeus icons">Zeus icons created by Smashicons - Flaticon</a>
             </p>
         </div>
     </aside>
@@ -34,31 +34,33 @@
             </p>
         </div>
         <form>
-            <h1>Let's do this!</h1>
             <div class="container">
-                <div>
-                    <label for="firstName">FIRST NAME</label><br>
-                    <input type="text" id="firstName" name="firstName" required>
-                </div>
-                <div>
-                    <label for="lastName">LAST NAME</label><br>
-                    <input type="text" id="lastName" name="lastName" required>
-                </div>
-                <div>
-                    <label for="email">EMAIL</label><br>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div>
-                    <label for="phoneNumber">PHONE NUMBER</label><br>
-                    <input type="tel" id="phoneNumber" name="phoneNumber" required>
-                </div>
-                <div>
-                    <label for="password">PASSWORD</label><br>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div>
-                    <label for="confirmPassword">CONFIRM PASSWORD</label><br>
-                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                <h1>Let's do this!</h1>
+                <div class="widget-container">
+                    <div>
+                        <label for="firstName">FIRST NAME</label><br>
+                        <input type="text" id="firstName" name="firstName" required>
+                    </div>
+                    <div>
+                        <label for="lastName">LAST NAME</label><br>
+                        <input type="text" id="lastName" name="lastName" required>
+                    </div>
+                    <div>
+                        <label for="email">EMAIL</label><br>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div>
+                        <label for="phoneNumber">PHONE NUMBER</label><br>
+                        <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                    </div>
+                    <div>
+                        <label for="password">PASSWORD</label><br>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div>
+                        <label for="confirmPassword">CONFIRM PASSWORD</label><br>
+                        <input type="password" id="confirmPassword" name="confirmPassword" required>
+                    </div>
                 </div>
             </div>
             <div class="below-container">
