added script and stylysed the error message

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         <label for="phoneNumber">PHONE NUMBER</label><br>
                         <input type="tel" id="phoneNumber" name="phoneNumber" required>
                     </div>
-                    <div>
+                    <div class="pass-div">
                         <label for="password">PASSWORD</label><br>
                         <input type="password" id="password" name="password" required>
                     </div>
-                    <div>
+                    <div class="pass-div">
                         <label for="confirmPassword">CONFIRM PASSWORD</label><br>
                         <input type="password" id="confirmPassword" name="confirmPassword" required>
                     </div>
