--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
             <div class="below-container">
                 <button type="submit">Create Account</button>
+                <div class="break" style="display: none;"></div>
                 <p>Already have an account? <a href="#">Log In</a></p>
             </div>
         </form>
